--- a/style.css
+++ b/style.css
@@ -217,6 +217,9 @@ h5{
     nav ul li a{
         font-size: 20px;
     }
+    a{
+        height:60px ;
+    }
     label #btn{
         display: block;
     }
@@ -254,8 +257,14 @@ h5{
      .cart{
        left: 50px;
      }
+     .cart img{
+        margin-left: 0;
+     }
      .avatar{
         left: 70px;
+     }
+     .avatar img{
+        margin-left: 20px;
      }
      .text{
         margin-right: 40px;
@@ -292,9 +301,9 @@ h5{
      }
      h5{
         position: relative;
-        left: 170px;
-        margin-top: 30px;
-        margin-left: 180px;
+        left: 150px;
+        margin-top: 35px;
+        margin-left: 170px;
         bottom: 75px;
      }
      .carrt{
