--- a/style.css
+++ b/style.css
@@ -218,7 +218,8 @@ h5{
     nav ul li a{
         font-size: 20px;
     }
-    a{
+    ul a{
+        width: 0;
         height:60px ;
     }
     label #btn{
@@ -257,6 +258,8 @@ h5{
      }
      .cart{
        left: 50px;
+       margin-top: 15px;
+
      }
      .cart img{
         margin-left: 0;
@@ -265,7 +268,7 @@ h5{
      }
      .avatar{
         left: 50px;
-        margin-left: 10px;
+        margin-left: 50px;
      }
      .avatar img{
         margin-left: 20px;
@@ -294,10 +297,10 @@ h5{
         display: none;
      }
      .dis{
-        margin-top: 40px;
+        margin-top: 30px;
      }
      .dis h3{
-        font-size: 35px;
+        font-size: 32px;
         margin-left: 70px;
      }
      .dis h4{
@@ -308,7 +311,7 @@ h5{
      h5{
         position: relative;
         left: 150px;
-        margin-top: 42px;
+        margin-top: 45px;
         margin-left: 130px;
         bottom: 75px;
      }
