--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav ul li a{
     color: gray;
     font-family: 'Kumbh Sans', sans-serif;
     margin-left: 40px;
-    padding: 15px 2px;
+    padding: 5px 2px;
     font-size: 13px;
     text-align: center;
 }
@@ -198,10 +198,10 @@ h5{
 }
 
 /* MEDIA QUERIES */
-@media (min-width:949px ) and (max-width: 1350px) {
+@media (min-width:649px ) and (max-width: 1350px) {
 
 }
-@media (max-width:950px ){
+@media (max-width:650px ){
     *{
         padding: 0;
         margin: 0;
@@ -220,7 +220,7 @@ h5{
     }
     ul a{
         width: 0;
-        height:60px ;
+        height:50px ;
     }
     label #btn{
         display: block;
@@ -258,7 +258,8 @@ h5{
      }
      .cart{
        left: 50px;
-       margin-top: 15px;
+       margin-left: 0px;
+       margin-top: 10px;
 
      }
      .cart img{
